DEW2020: added times to website; added PC to website; added invited speakers to website; added RSVP button to website

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -80,11 +80,18 @@
             <h1>1st Data Excellence Workshop (DEW 2020)</h1>
             <hr>
             <p>
-            	<a href="https://www.humancomputation.com" target="_blank">At the 8th AAAI Conference on Human Computation and Crowdsourcing</a><br><br>
+            	<a href="https://www.humancomputation.com" target="_blank"><b>At the 8th AAAI Conference on Human Computation and Crowdsourcing</b></a><br><br>
+                <span style="color: white;">
             	<b>Date:</b> 26 October 2020<br>
+                <b>Time PT:</b> 6:00am-9:30pm<br>
+                <b>Time EST:</b> 9:00am-12:30pm<br>
+                <b>Time CET:</b> 3:00pm-6:30pm<br>
 				<b>Location:</b> Virtual
+                </span>
 			</p>
             <a href="#dates" class="btn btn-primary btn-xl page-scroll">Important Dates</a>
+            <span style="width: 20px; display: inline-block;"></span>
+            <a href="https://forms.gle/tnw1ZM8QGgK8kBwA6" target="_blank" class="btn btn-warning btn-xl">RSVP</a>
         </div>
     </div>
 </header>
@@ -142,7 +149,12 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Workshop</h3>
-                    <p class="text-muted">October 26, 2020</p>
+                    <p class="text-muted">
+                        October 26, 2020<br>
+                        PT: 6:00am-9:30pm<br>
+                        EST: 9:00am-12:30pm<br>
+                        CET: 3:00pm-6:30pm
+                    </p>
                 </div>
             </div>
         </div>
@@ -257,7 +269,15 @@
                 <br>
                 <h2 class="section-heading">Program Committee</h2>
                 <hr class="light">
-                <p>TBD</p>
+                <p>
+                    Chris Welty, Google Research<br>
+                    Ana Rogers, University of Copenhagen<br>
+                    Omar Alonso, Curai<br>
+                    Markus Krause, Brainworks<br>
+                    Juho Kim, KAIST<br>
+                    Alex Quinn, Purdue University<br>
+                    Owen Rambow, Elemental Cognition<br>
+                </p>
             </div>
         </div>
     </div>
@@ -271,57 +291,134 @@
                 <hr class="primary">
                 <p>TBD</p>
                 <br>
-                <h3 id="keynotes">Keynotes & Invited Talks</h3><br>
+                <h3 id="keynotes">Invited Talks</h3><br>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/keynotes/keynote_tbd.jpg" class="img-responsive" alt="">
+            
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://www.linkedin.com/in/emily-d-4553b9194/" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/emily_dinan.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Invited Speaker
-                            </div>
                             <div class="project-name">
-                                TBD
+                                Emily Dinan
+                            </div>
+                            <div class="project-category text-faded">
+                                Facebook AI
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/keynotes/keynote_tbd.jpg" class="img-responsive" alt="">
+
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://www.nist.gov/people/ian-soboroff" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/ian_soboroff.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Invited Speaker
-                            </div>
                             <div class="project-name">
-                                TBD
+                                Ian Soboroff
+                            </div>
+                            <div class="project-category text-faded">
+                                NIST
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/keynotes/keynote_tbd.jpg" class="img-responsive" alt="">
+
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://people.csail.mit.edu/madry/" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/aleksander_madry.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Invited Speaker
-                            </div>
                             <div class="project-name">
-                                TBD
+                                Aleksander Mądry
+                            </div>
+                            <div class="project-category text-faded">
+                                MIT
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
+
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://www.linkedin.com/in/quang-duong-6667774/" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/quang_duong.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Quang Duong
+                            </div>
+                            <div class="project-category text-faded">
+                                Google Health
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://www.linkedin.com/in/andreaolgiati/" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/andrea_olgiati.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Andrea Olgiati
+                            </div>
+                            <div class="project-category text-faded">
+                                Amazon AI
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://www.linkedin.com/in/ben-hutchinson-ab56464/" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/ben_hutchinson.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Ben Hutchinson
+                            </div>
+                            <div class="project-category text-faded">
+                                Google Research
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+
+            <div class="col-lg-3 col-sm-4">
+                <a href="https://www.linkedin.com/in/pwhallinan/" target="_blank" class="portfolio-box">
+                    <img src="img/keynotes/peter_hallinan.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Peter Hallinan
+                            </div>
+                            <div class="project-category text-faded">
+                                Amazon
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            
+
+
         </div>
     </div>
 </section>
