--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -83,7 +83,7 @@
             	<a href="https://www.humancomputation.com" target="_blank"><b>At the 8th AAAI Conference on Human Computation and Crowdsourcing</b></a><br><br>
                 <span style="color: white;">
             	<b>Date:</b> 26 October 2020<br>
-                <b>Time PT:</b> 6:00am-9:30pm<br>
+                <b>Time PT:</b> 6:00am-9:30am<br>
                 <b>Time EST:</b> 9:00am-12:30pm<br>
                 <b>Time CET:</b> 3:00pm-6:30pm<br>
 				<b>Location:</b> Virtual
@@ -151,7 +151,7 @@
                     <h3>Workshop</h3>
                     <p class="text-muted">
                         October 26, 2020<br>
-                        PT: 6:00am-9:30pm<br>
+                        PT: 6:00am-9:30am<br>
                         EST: 9:00am-12:30pm<br>
                         CET: 3:00pm-6:30pm
                     </p>
