Revert "DEW2020: Remove Mike's Amazon affiliation because contract has not officially started yet"
This reverts commit 03892d4c511b5583008d20e2985fa10d25e4272c.

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -262,7 +262,7 @@
                 <p>
                     Praveen Paritosh, Google<br>
                     Matt Lease, Amazon and UT Austin<br>
-                    Mike Schaekermann, University of Waterloo<br>
+                    Mike Schaekermann, Amazon and University of Waterloo<br>
                     Lora Aroyo, Google<br>
                 </p>
                 <br>
