Add link to EasyChair submission

--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -1,5 +1,5 @@
 <h1>Rigorous Evaluation of AI Systems Workshop</h1>
-<p><b>AAAI Conference on Human Computing and Crowdsourcing<br>October 26, 2020 (virtual)</b></p>
+<p><b>AAAI Conference on Human Computing and Crowdsourcing<br>October 26, 2020 (virtual)<br>Submission Link: <a href="https://easychair.org/cfp/reais-2020">https://easychair.org/cfp/reais-2020</a></b></p>
 
 <p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">This workshop is part of the HCOMP 2020 conference. We intend to build a community interested in using rigorous evaluation to tackle real-world problems that may be otherwise inaccessible.&nbsp;</span></p>
 
@@ -11,7 +11,7 @@
 
 <p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">Often AI systems and datasets are evaluated by measures that only have mathematical and theoretical components, while the real, physical world is messy, irregular, and subject to constant change.&nbsp; Some systems and approaches that perform well under the scrutiny of clean, elegant theory may still fail quite spectacularly in real-world applications simply because the theory did not match reality.&nbsp; Traditionally, approaches such as crowdsourcing, "human in the loop" decision systems, HCI mechanisms, and other human-centered sources of ground truth are powerful complements used to fill in that "real-world" gap. &nbsp; However, because they are often part of the same construction by the same creators, this human component of measure and evaluation has the correlated biases and omissions as the rest of the system.&nbsp; To overcome these biases and omissions, an independent layer of 3rd party human-centered evaluation, or "meta-evaluation" may be needed.&nbsp; If this separate, external scrutiny is crafted from the perspective of actual users and consumers of such datasets and systems rather than the expectations of the system/dataset creators, it might be used to more accurately measure real-world performance and value.&nbsp;</span></p>
 
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">This year, we will will have a focus on how we can use human computation to craft external, independent evaluation of AI datasets and systems, especially focussed on application to:</span></p>
+<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">This year, we will will have a focus on how we can use human computation to craft external, independent evaluation of AI datasets and systems, especially focused on application to:</span></p>
 
 <ul>
 	<li style="list-style-type:disc" dir="ltr">
@@ -31,7 +31,7 @@
 	</li>
 </ul>
 
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">In the context of these applications, we invite scientific contributions and positions papers on the following topics:</span></p>
+<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt"><br><br>In the context of these applications, we invite scientific contributions and positions papers on the following topics:</span></p>
 
 <ul>
 	<li style="list-style-type:disc" dir="ltr">
@@ -80,23 +80,11 @@
 
 <h2 dir="ltr">Key Dates</h2>
 
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">&nbsp;&nbsp;&nbsp; </span><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">October 4, 2020: Full papers due</span></p>
+<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">&nbsp;&nbsp;&nbsp; </span><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">October 4, 2020: Full papers due (<a href="https://easychair.org/cfp/reais-2020">Submission on EasyChair</a>)</span></p>
 
 <p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">&nbsp;&nbsp;&nbsp; </span><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">October 13, 2020: Notification of acceptance</span></p>
 
 <p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">&nbsp;&nbsp;&nbsp; </span><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">October 20, 2020: Final camera-ready papers due</span></p>
-
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">Workshop Authors are invited to submit papers of up to 6 pages, plus any number of additional pages containing references only.</span></p>
-
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">All submitted papers must represent original work, not previously published or under simultaneous peer-review for any other peer-reviewed, archival conference or journal.</span></p>
-
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">Papers must be formatted in AAAI two-column, camera-ready style; please refer to the style guide here:</span></p>
-
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">(https://www.aaai.org/Publications/Templates/Original_AAAI_Style.zip) for details. Papers must be in trouble-free, high-resolution PDF format, formatted for US Letter (8.5″ x 11″) paper, using Type 1 or TrueType fonts. The AAAI copyright block is not required on submissions, but must be included on final accepted versions.</span></p>
-
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">Electronic paper submission through the HCOMP-20 EasyChair paper submission site required on or before the deadlines listed above. We cannot accept submissions by e-mail or fax. Authors will receive confirmation of receipt of their abstracts or papers, including an ID number, shortly after submission. HCOMP will contact authors again only if problems are encountered with papers.</span></p>
-
-<p dir="ltr"><span style="background-color:transparent; color:#000000; font-family:Arial; font-size:12pt">At least one author of each accepted paper must register for the conference to present the work or acceptance will be withdrawn.</span></p>
 
 <h2 dir="ltr">List of Workshop Activities</h2>
 
