--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--Favicon-->
-  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="reais-2020/assets/favicon.ico" type="image/x-icon">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
@@ -15,7 +15,7 @@
   <link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css' rel='stylesheet' type='text/css'>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="/reais-2020/assets/css/main.css">
 
   <!-- OG Tag -->
   
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="img-wrap col-12 col-md-4">
         <div class="img">
-          <img src="/assets/img/logo.png" alt="user_image">
+          <img src="reais-2020/assets/img/logo.png" alt="user_image">
         </div>
       </div>
       <div class="text-wrap col-12 col-md-8">
