Update logo, add extended abstract

--- a/reais-2020/404.html
+++ b/reais-2020/404.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--Favicon-->
-  <link rel="shortcut icon" href="reais-2020/assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/reais-2020/assets/favicon.ico" type="image/x-icon">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
@@ -29,15 +29,15 @@
   <meta property="og:description" content="" />
   <meta property="og:type" content="website, blog" />
   <meta property="og:image"
-    content="http://eval.how/reais-2020/assets/img/logo.png" />
+    content="http://localhost:4000/assets/img/logo.png" />
   <meta property="og:site_name" content="REAIS Workshop at HCOMP 2020" />
-  <meta property="og:url" content="http://eval.how/reais-2020/404.html" />
+  <meta property="og:url" content="http://localhost:4000/404.html" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="REAIS Workshop at HCOMP 2020-Page not found" />
   <meta name="twitter:description" content="" />
   <meta name="twitter:image"
-    content="http://eval.how/reais-2020/assets/img/logo.png" />
+    content="http://localhost:4000/assets/img/logo.png" />
 
   <title>REAIS Workshop at HCOMP 2020-Page not found</title>
 </head>
@@ -49,13 +49,13 @@
   <nav>
     <ul>
       <!--  -->
-      <a href="http://eval.how/reais-2020">
+      <a href="http://localhost:4000">
         <li class="current btn-nav">Home</li>
       </a>
-      <!-- <a href="http://eval.how/reais-2020/tags">
+      <!-- <a href="http://localhost:4000/tags">
         <li class="btn-nav">Tags</li>
       </a>
-      <a href="http://eval.how/reais-2020/portfolio">
+      <a href="http://localhost:4000/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a>
        -->
@@ -65,7 +65,7 @@
 
 <div id="error404">
     <h1>Oops, Nothing to see here! 🙉</h1>
-    <a href="http://eval.how/reais-2020" class="return-btn">
+    <a href="http://localhost:4000" class="return-btn">
         <p>Click here to return to the main page!!</p>
     </a>
 </div>
