--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--Favicon-->
-  <link rel="shortcut icon" href="reais-2020/assets/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/reais-2020/assets/favicon.ico" type="image/x-icon">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
@@ -29,15 +29,15 @@
   <meta property="og:description" content="" />
   <meta property="og:type" content="website, blog" />
   <meta property="og:image"
-    content="http://eval.how/reais-2020/assets/img/logo.png" />
+    content="http://localhost:4000/assets/img/logo.png" />
   <meta property="og:site_name" content="REAIS Workshop at HCOMP 2020" />
-  <meta property="og:url" content="http://eval.how/reais-2020/" />
+  <meta property="og:url" content="http://localhost:4000/" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="REAIS Workshop at HCOMP 2020" />
   <meta name="twitter:description" content="" />
   <meta name="twitter:image"
-    content="http://eval.how/reais-2020/assets/img/logo.png" />
+    content="http://localhost:4000/assets/img/logo.png" />
 
   <title>REAIS Workshop at HCOMP 2020</title>
 </head>
@@ -49,13 +49,13 @@
   <nav>
     <ul>
       <!--  -->
-      <a href="http://eval.how/reais-2020">
+      <a href="http://localhost:4000">
         <li class="current btn-nav">Home</li>
       </a>
-      <!-- <a href="http://eval.how/reais-2020/tags">
+      <!-- <a href="http://localhost:4000/tags">
         <li class="btn-nav">Tags</li>
       </a>
-      <a href="http://eval.how/reais-2020/portfolio">
+      <a href="http://localhost:4000/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a>
        -->
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="img-wrap col-12 col-md-4">
         <div class="img">
-          <img src="reais-2020/assets/img/logo.png" alt="user_image">
+          <img src="/reais-2020/assets/img/logo.png" alt="user_image">
         </div>
       </div>
       <div class="text-wrap col-12 col-md-8">
@@ -150,11 +150,11 @@
 </ul>
 
 <h2 id="key-dates">Key Dates</h2>
-<p>October 4, 2020: Full papers due (<a href="https://easychair.org/cfp/reais-2020">submission on EasyChair</a>)<br />
-October 13, 2020: Notification of acceptance<br />
+<p>October 9, 2020: Extended abstracts and short papers due (<a href="https://easychair.org/cfp/reais-2020">submission on EasyChair</a>)<br />
+October 16, 2020: Notification of acceptance<br />
 October 20, 2020: Final camera-ready papers due</p>
 
-<p>Workshop Authors are invited to submit papers of up to 6 pages, plus any number of additional pages containing references only.</p>
+<p>Workshop Authors are invited to submit extended abstracts (2-4 pages) or short papers (4-6 pages), plus any number of additional pages containing references only.</p>
 
 <h2 id="organizing-committee">Organizing committee</h2>
 <p>Bernease Herman<br />
