DEW2020: Allow 1-page submissions

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -189,7 +189,7 @@
                     </ul>
                 </p>
                 <p class="text-faded">
-                    We welcome <span style="color: white; font-weight: bold">short papers (2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop.
+                    We welcome <span style="color: white; font-weight: bold">short papers (1-2 pages)</span> and <span style="color: white; font-weight: bold">long papers (4 pages)</span> addressing one or more of the topics of interest below. Papers will be peer-reviewed by the program committee and accepted papers will be presented as lightning talks during the workshop.
                 </p>
                 <p class="text-center">
                     <br>
