DEW2020: Add links to invited talks to navigation and header area; always show names and affiliations for invited talks, not only on hover

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -67,6 +67,9 @@
                 <li>
                     <a class="page-scroll" href="#program">Program</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#invited-talks">Talks</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -92,6 +95,8 @@
             <a href="#dates" class="btn btn-primary btn-xl page-scroll">Important Dates</a>
             <span style="width: 20px; display: inline-block;"></span>
             <a href="https://forms.gle/tnw1ZM8QGgK8kBwA6" target="_blank" class="btn btn-warning btn-xl">RSVP</a>
+            <span style="width: 20px; display: inline-block;"></span>
+            <a href="#invited-talks" class="btn btn-success btn-xl page-scroll">Talks</a>
         </div>
     </div>
 </header>
@@ -291,7 +296,7 @@
                 <hr class="primary">
                 <p>TBD</p>
                 <br>
-                <h3 id="keynotes">Invited Talks</h3><br>
+                <h3 id="invited-talks">Invited Talks</h3><br>
             </div>
         </div>
     </div>
@@ -307,7 +312,7 @@
                             <div class="project-name">
                                 Emily Dinan
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 Facebook AI
                             </div>
                         </div>
@@ -324,7 +329,7 @@
                             <div class="project-name">
                                 Ian Soboroff
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 NIST
                             </div>
                         </div>
@@ -341,7 +346,7 @@
                             <div class="project-name">
                                 Aleksander Mądry
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 MIT
                             </div>
                         </div>
@@ -358,7 +363,7 @@
                             <div class="project-name">
                                 Quang Duong
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 Google Health
                             </div>
                         </div>
@@ -375,7 +380,7 @@
                             <div class="project-name">
                                 Andrea Olgiati
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 Amazon AI
                             </div>
                         </div>
@@ -392,7 +397,7 @@
                             <div class="project-name">
                                 Ben Hutchinson
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 Google Research
                             </div>
                         </div>
@@ -409,7 +414,7 @@
                             <div class="project-name">
                                 Peter Hallinan
                             </div>
-                            <div class="project-category text-faded">
+                            <div class="project-category">
                                 Amazon
                             </div>
                         </div>
