DEW2020: Add previous workshops (meta-Eval 2019, SAD 2019, SAD 2018)

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -111,6 +111,14 @@
                     <p>Panos Ipeirotis [Ipeirotis, 2010], one of the founders of the HCOMP research community, warned us that <b>crowdsourced data collection platforms had the structural properties of a market for lemons</b> [Akerlof, 1967]. Due to uncertainty in the notion of quality, the market focuses on price, resulting in an equilibrium state where the good sellers are priced out of the market and only lemons remain. The focus on scale, speed, and cost of building datasets has resulted in an impact on quality, which is nebulous and often circularly defined, since the annotators are the source of data and ground truth [Riezler, 2014]. While dataset quality is still the top concern everyone has, the ways in which that is measured in practice is poorly understood and sometimes simply wrong. A decade later, we see some cause for concern: fairness and bias issues in labeled datasets [Goel and Faltings, 2019], quality issues in datasets [Crawford and Paglen, 2019], limitations of benchmarks [Kovaleva et al., 2019, Welty et al., 2019] reproducibility concerns in machine learning research [Pineau et al., 2018, Gunderson and Kjensmo, 2018], lack of documentation and replication of data [Katsuno et al., 2019].</p>
 
                     <p>Currently, data excellence happens organically due to appropriate support, expertise, diligence, commitment, pride, community, etc. However, data excellence is more than maintaining a minimum standard for the ways in which we collect, publish or assess our data. It’s a metascientific enterprise of recognizing what’s important in the long term for science.</p>
+
+                    <p>This workshop continues a series of <u><b>preceding workshops on related topics</b></u>:
+                    <ul style="font-size: 150%">
+                        <li><a href="http://eval.how/aaai/" target="_blank">meta-Eval 2019</a> @ HCOMP</li>
+                        <li><a href="https://sadworkshop.wordpress.com/" target="_blank">SAD 2019</a> @ TheWebConf (WWW)</li>
+                        <li><a href="https://sadworkshop.wordpress.com/2018-edition/" target="_blank">SAD 2018</a> @ HCOMP</li>
+                    </ul>
+                    </p>
                 </p>
             </div>
         </div>
