Quick date update

--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -76,7 +76,7 @@
       </div>
       <div class="text-wrap col-12 col-md-8">
         <h2 class="username">Workshop on Rigorous Evaluation for AI Systems</h2>
-        <p class="description">Virtual meeting on October 26, 2020. Part of the AAAI Conference on Human Computation and Crowdsourcing.</p>
+        <p class="description">Virtual meeting on <b>Sunday, October 25, 2020</b>. Part of the AAAI Conference on Human Computation and Crowdsourcing.</p>
 
         <ul id="icons">
           
