--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -551,7 +551,9 @@
                 <!-- <hr class="primary">
                 <h3 class="text-center">Bio</h3><br>
                 <p>
-                    Bio content
+                    Emily is a Research Engineer at Facebook AI Research in New York. She graduated with a Master's degree in Mathematics from the University of Washington. Emily's research interests include conversational AI, natural language processing, and fairness in these fields.
+
+
                 </p> -->
             </div>
         </div>
