DEW2020: Make Emily Dinan's bio visible

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -548,13 +548,11 @@
                 <p>
                     Models trained on large unlabeled corpora of human interactions will learn patterns and mimic behaviors therein, which may include offensive or otherwise toxic behavior and unwanted biases. I will discuss several methods for mitigating these issues in neural dialogue models. In particular, I will highlight the use of iterative, adversarial human-and-model-in-the-loop data collection and model training procedures for the purpose of making chatbots robust to adversarial attack from humans. In opposition to static benchmarks, these approaches yield a “moving goalpost” for natural language understanding systems, and recent work shows that models trained on these increasingly complex tasks are more robust to adversarial attack.
                 </p>
-                <!-- <hr class="primary">
+                <hr class="primary">
                 <h3 class="text-center">Bio</h3><br>
                 <p>
                     Emily is a Research Engineer at Facebook AI Research in New York. She graduated with a Master's degree in Mathematics from the University of Washington. Emily's research interests include conversational AI, natural language processing, and fairness in these fields.
-
-
-                </p> -->
+                </p>
             </div>
         </div>
     </div>
