--- a/reais-2020/404.html
+++ b/reais-2020/404.html
@@ -29,15 +29,15 @@
   <meta property="og:description" content="" />
   <meta property="og:type" content="website, blog" />
   <meta property="og:image"
-    content="http://eval.how/assets/img/logo.png" />
+    content="http://localhost:4000/assets/img/logo.png" />
   <meta property="og:site_name" content="REAIS Workshop at HCOMP 2020" />
-  <meta property="og:url" content="http://eval.how/404.html" />
+  <meta property="og:url" content="http://localhost:4000/404.html" />
 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="REAIS Workshop at HCOMP 2020-Page not found" />
   <meta name="twitter:description" content="" />
   <meta name="twitter:image"
-    content="http://eval.how/assets/img/logo.png" />
+    content="http://localhost:4000/assets/img/logo.png" />
 
   <title>REAIS Workshop at HCOMP 2020-Page not found</title>
 </head>
@@ -49,13 +49,13 @@
   <nav>
     <ul>
       <!--  -->
-      <a href="http://eval.how">
+      <a href="http://localhost:4000">
         <li class="current btn-nav">Home</li>
       </a>
-      <!-- <a href="http://eval.how/tags">
+      <!-- <a href="http://localhost:4000/tags">
         <li class="btn-nav">Tags</li>
       </a>
-      <a href="http://eval.how/portfolio">
+      <a href="http://localhost:4000/portfolio">
         <li class="btn-nav">Portfolio</li>
       </a>
        -->
@@ -65,7 +65,7 @@
 
 <div id="error404">
     <h1>Oops, Nothing to see here! 🙉</h1>
-    <a href="http://eval.how" class="return-btn">
+    <a href="http://localhost:4000" class="return-btn">
         <p>Click here to return to the main page!!</p>
     </a>
 </div>
