--- a/reais-2020/index.html
+++ b/reais-2020/index.html
@@ -48,17 +48,17 @@
 <header>
   <nav>
     <ul>
-      <!--  -->
-      <a href="http://localhost:4000">
+      
+      <a href="http://localhost:4000/reais-2020/">
         <li class="current btn-nav">Home</li>
       </a>
-      <!-- <a href="http://localhost:4000/tags">
-        <li class="btn-nav">Tags</li>
+      <a href="http://localhost:4000/reais-2020/program.html">
+        <li class="btn-nav">Program</li>
       </a>
-      <a href="http://localhost:4000/portfolio">
+      <!--<a href="http://localhost:4000/reais-2020/portfolio">
         <li class="btn-nav">Portfolio</li>
-      </a>
-       -->
+      </a>-->
+      
     </ul>
   </nav>
 </header>
