DEW2020: Added Peter Hallinan's bio and talk title + abstract

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -618,15 +618,15 @@
                 <br>
                 <h2 class="section-heading text-center">Peter Hallinan (AI & Data @ Amazon)</h2>
                 <hr class="primary">
-                <h3 class="text-center">Title: TBD</h3><br>
+                <h3 class="text-center">Getting good data faster</h3><br>
                 <p>
-                    Abstract: TBD
+                    The AI industry is collectively fielding tens of thousands of ML applications, many of which require human-labeled data (HLD) for training, evaluation or production “patching”. We identify business and operational challenges to producing high-quality HLD at scale, and review the pros and cons of common organizational solutions: outsourcing HLD to third-party vendors, insourcing HLD to a product or engineering sub-team, insourcing HLD to a specialized HLD function, letting science contributors fend for themselves, and hybrids of these.
                 </p>
-                <!-- <hr class="primary">
+                <hr class="primary">
                 <h3 class="text-center">Bio</h3><br>
                 <p>
-                    Bio content
-                </p> -->
+                    Peter W. Hallinan leads ML initiatives in human-labeled data at Amazon. Prior to Amazon, he was a partner at Blindsight (computer vision for the blind, sold to AMZN), and at Techcelerator, a venture development firm. Earlier, he was a vice president at Analysis Group / Integral, where he specialized in growth strategy and the management of innovation for Fortune 500 companies in high-tech, life science, and finance.  He holds A.B., S.M., and Ph.D. degrees from Harvard University, where he conducted research in pattern recognition and artificial intelligence, co-authored an early book on face recognition, and moonlighted as a teaching fellow in policy analysis and experimental design at the John F. Kennedy School of Government. His volunteer activities have included serving as a consulting professor at the Stanford School of Medicine, and leading the American Chamber of Commerce in Madagascar.
+                </p>
             </div>
         </div>
     </div>
