DEW2020: Added Ian Soboroff's talk title + abstract

--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -565,9 +565,9 @@
                 <br>
                 <h2 class="section-heading text-center">Ian Soboroff (NIST)</h2>
                 <hr class="light">
-                <h3 class="text-center">Title: TBD</h3><br>
+                <h3 class="text-center">TREC: Building datasets within a community of use</h3><br>
                 <p>
-                    Abstract: TBD
+                    NIST's Text Retrieval Conference (TREC) and TRECVID evaluations of multimedia search are long-running evaluation workshops that develop datasets for search ranking, classification, and other AI tasks, along with appropriate metrics that the research community can use to gauge progress in those tasks.  Since the start of TREC in 1991, NIST has developed a large store of practical experience in collecting, assembling, labeling, and measuring the quality of datasets.  In this brief talk, I will describe the history of TREC relevance assessments, the processes we use to do determine those labels, and research on how to make those processes more robust, reliable, and inexpensive.
                 </p>
                 <hr class="primary">
                 <h3 class="text-center">Bio</h3><br>
