--- a/dew2020/index.html
+++ b/dew2020/index.html
@@ -94,7 +94,7 @@
 			</p>
             <a href="#dates" class="btn btn-primary btn-xl page-scroll">Important Dates</a>
             <span style="width: 20px; display: inline-block;"></span>
-            <a href="https://forms.gle/tnw1ZM8QGgK8kBwA6" target="_blank" class="btn btn-warning btn-xl">RSVP</a>
+            <a href="https://www.humancomputation.com/attend.html#registration" target="_blank" class="btn btn-warning btn-xl">Register</a>
             <span style="width: 20px; display: inline-block;"></span>
             <a href="#invited-talks" class="btn btn-success btn-xl page-scroll">Talks</a>
         </div>
